# neural-compression-MDL

./: .gitignore  main.py  pyproject.toml
simple_bayesian_vae/src/: layers.py  losses.py  models.py  train.py
simple_bayesian_vae/src/bayesian_vae/: config.py  data_mnist.py  layers.py  losses.py  models.py  train.py
src/bayesian_dit/: layers.py
src/bayesian_dit/tests/: test_libfns.py
src/bayesian_vae/: config.py  continue_train.py  data_mnist.py  layers.py  losses.py  models.py  newlayers.py  newlosses.py  newmodel.py  newtrain.py  overfitting.py  overlayers.py  overlosses.py  overmodel.py  overtrain.py  train.py  utils.py
src/bayesian_vae/tests/: functions.py  layers.py  models.py  test_layers.py  test_libfns.py  test_losses.py  test_models.py  test_train.py
src/common/: layers.py
