[project]
name = "neural-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax==0.12.7",
    "jax==0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "optax==0.2.8",
    "orbax-checkpoint==0.12.1",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
